# doc-gen-pydantic-ai-box-mcp-server

./: README.md  pyproject.toml
data/: NDA.json  nda_template.docx
src/: console_utils.py  demo.py
